# photo-organizer

./: .env  .gitignore  .prettierrc  components.json  docker-compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.run/: Compose Deployment.run.xml  Run dev.run.xml
db_service/: .env  Cargo.toml  diesel.toml
db_service/migrations/2025-02-24-201524_directories-table/: up.sql
db_service/migrations/2025-02-24-201723_photos-table/: up.sql
db_service/migrations/2025-02-24-203314_metadata-table/: up.sql
db_service/migrations/2025-03-08-193912_tags/: down.sql  up.sql
db_service/migrations/2025-03-08-193932_photo_tags_mappings/: down.sql  up.sql
db_service/migrations/2025-03-22-154736_add-analyzed-columns-directories-table/: down.sql  up.sql
db_service/migrations/2025-03-27-235038_face_embeddings/: down.sql  up.sql
db_service/migrations/2025-04-02-193241_face_clusters/: down.sql  up.sql
db_service/src/: db.rs  lib.rs  seed.rs
db_service/src/schema/: mod.rs  schema.rs  types.rs
db_service/src/services/: directory.rs  embeddings.rs  faces.rs  metadata.rs  mod.rs  photo.rs  tags.rs
infrastructure/: README.md  docker-compose.yaml
src/: App.css  App.tsx  Router.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/2025-02-24-201524_directories-table/: up.sql
src-tauri/migrations/2025-02-24-201723_photos-table/: up.sql
src-tauri/migrations/2025-02-24-203314_metadata-table/: down.sql
src-tauri/migrations/2025-03-08-193932_photo_tags_mappings/: down.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: commands.rs  directories.rs  faces.rs  folder_router.rs  mod.rs  photos.rs  types.rs
src-tauri/src/schema/: mod.rs  schema.rs  types.rs
src-tauri/src/services/: mod.rs  photo.rs  tags.rs
src-tauri/src/tagging/: object_detection.rs
src-tauri/src/task_queue/: mod.rs
src-tauri/src/task_queue/tasks/: mod.rs  pre_initialization.rs  worker.rs
src/components/: Sidebar.tsx
src/components/faces/: FaceGroup.tsx  FacesDisplay.tsx
src/components/filters/: TagFilters.tsx
src/components/folders/: ImportFolder.tsx
src/components/magicui/: avatar-circles.tsx  blur-fade.tsx  file-tree.tsx
src/components/menu/: SidebarMenu.tsx  Titlebar.tsx
src/components/notifications/: PreviewNotifier.tsx
src/components/photo/: Photo.tsx  PhotoArea.tsx  PhotoCarousel.tsx  PhotoDisplay.tsx  PhotoGrid.tsx  PhotoPreview.tsx  PhotoWithHover.tsx
src/components/photo/carousel/: CarouselSlides.tsx  FullscreenToggle.tsx  NavigationArrows.tsx  PhotoCarousel.tsx  PhotoInfo.tsx  ThumbnailBar.tsx  constants.ts  useCarouselKeyNavigation.ts  useFullscreen.ts
src/components/photo/carousel/context-menu/: ImageContextMenu.tsx
src/components/photo/carousel/hooks/: useCarouselKeyNavigation.ts  useFullscreen.ts
src/components/photo/grid/: PhotoArea.tsx  PhotoGrid.tsx  PhotoHoverCard.tsx  PhotoPreview.tsx  PhotoWithHover.tsx
src/components/sidebar/: SelectedPhotoPreview.tsx
src/components/ui/: background-beams.tsx  badge.tsx  button.tsx  card.tsx  context-menu.tsx  layout-grid.tsx  multi-step-loader.tsx  scroll-area.tsx  skeleton.tsx  slider.tsx  sonner.tsx
src/contexts/: ChosenDirectoryContext.tsx  FoldersContext.tsx
src/contexts/slices/: pathSlice.ts  photosSlice.ts
src/helpers/: MeasureWrapper.tsx
src/lib/: animations.ts  api.ts  store.ts  utils.ts
src/pages/: HeroPage.tsx  HomePage.tsx  LoadingPage.tsx
src/types/: folder.ts  index.ts  photo.ts
tagging_service/: Cargo.toml  Dockerfile
tagging_service/src/: main.rs
tagging_service/src/face_clustering/: calculate_embeddings.rs  detect_faces.rs  face_clustering.rs  face_detection_pipeline.rs  face_embeddings.rs  mod.rs  nms.rs  task.rs
tagging_service/src/tagging/: mod.rs  object_detection.rs  task.rs  yolo_detect.rs
