[package]
name = "db_service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["postgres", "postgres_backend", "r2d2", "64-column-tables", "uuid", "numeric", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
uuid = { version = "1.14.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
pgvector = { version = "0.4", features = ["diesel"] }

walkdir = "2.5"
anyhow = "1.0.98"
serde_yaml = "0.9"
tracing = "0.1.41"
image = "0.25.6"
sha2 = "0.10.8"
rayon = "1.10.0"
exiftool = "0.2.3"
serde_json = "1.0"
