[package]
name = "photo-organizer"
version = "0.1.0"
description = "A photo catalogging app"
authors = ["Robert Grancsa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photo_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
anyhow = "1.0.97"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

db_service = { path = "../db_service" }
diesel = { version = "2.2.0", features = ["postgres", "postgres_backend", "r2d2", "64-column-tables", "uuid", "numeric", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
uuid = { version = "1.14.0", features = ["v4"] }

tokio = { version = "1.43.0", features = ["time"] }
rayon = "1.10.0"
image = "0.25.5"
dirs = "6.0.0"

