[package]
name = "tagging_service"
version = "0.1.0"
edition = "2024"

[dependencies]
db_service = { path = "../db_service" }

anyhow = "1.0.97"
image = { version = "0.25.6", features = [] }
rayon = "1.10.0"

ort = { version = "2.0.0-rc.9", features = ["cuda"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter", "fmt" ] }
yolo-rs = "0.1.1"

ndarray = { version = "=0.16.1", features = ["rayon"] }
ndarray_old = { version = "=0.15.6", package = "ndarray", features = ["rayon"] }
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-nn = "0.7.1"
itertools = "0.14.0"
uuid = { version = "1.16.0", features = ["v4"] }
